--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,12 +1,36 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+
+      <br>
+      <ion-checkbox>Hola Mundo</ion-checkbox>
+      <br>
+      <br>
+      <br>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+<p> EL heroe que salvo {{subtitle}}
+
+</p>
+  <h1>
+    {{title}}
+
+    {{subtitle}}
+
+
+    <h1>{{title}}</h1>
+    <h2>My favorite hero is: {{heroe}} </h2>
+    <p>Heroes:</p>
+    <ul>
+    <li *ngFor="let hero of heroes">
+    {{ hero }}
+    </li>
+    </ul>
+
+ </h1>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
